# lslidar_description

./: CMakeLists.txt  package.xml
meshes/: LSC16_base.stl  LSC16_lid.stl  LSC16_scan.stl
urdf/: LSC16.urdf.xacro
