<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lslidar_description</name>
  <version>1.0.0</version>
  <description>LS Lidar description package for LSC16 lidar</description>
  <maintainer email="anthony.zyjiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>MIT</license>

  <author email="anthony.zyjiang.github@outlook.com">Zhengyi Jiang</author>
 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>